language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_redundant_tuple_in_case_retain_extras.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  case\n    #(\n      // first comment\n      1,\n      // second comment\n      2,\n      3 // third comment before comma\n\n      ,\n\n      // fourth comment after comma\n\n    )\n  {\n    #(\n      // first comment\n      a,\n      // second comment\n      b,\n      c // third comment before comma\n\n      ,\n\n      // fourth comment after comma\n\n    ) -> 0\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  case
    #(
    ▔▔
      // first comment
▔▔▔▔▔▔↑               
      1,
      // second comment
      2,
      3 // third comment before comma

      ,

      // fourth comment after comma

    )
  {
    #(
      // first comment
      a,
      // second comment
      b,
      c // third comment before comma

      ,

      // fourth comment after comma

    ) -> 0
  }
}


----- AFTER ACTION

pub fn main() {
  case
    
      // first comment
      1,
      // second comment
      2,
      3 // third comment before comma

      

      // fourth comment after comma

    
  {
    
      // first comment
      a,
      // second comment
      b,
      c // third comment before comma

      

      // fourth comment after comma

     -> 0
  }
}
