language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_unreachable_clauses_removes_alternative_patterns.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n  case x {\n    Ok(n) -> 1\n    Ok(1) -> 3\n    Error(_) | Ok(_) -> todo\n  }\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
  case x {
    Ok(n) -> 1
    Ok(1) -> 3
    ↑         
    Error(_) | Ok(_) -> todo
  }
}


----- AFTER ACTION
pub fn main(x) {
  case x {
    Ok(n) -> 1
    
    Error(_) -> todo
  }
}
